Make Out-Of-Date Texts

--- a/views/DE/Start.ejs
+++ b/views/DE/Start.ejs
@@ -117,12 +117,12 @@
       <main class="mdl-layout__content">
         <div class="page-content"><!-- Your content goes here -->
           <div data-relative-input="true" id="scene">
-            <div data-depth="0.2" id="second-para">Für die Zukunft.</div>
+            <div data-depth="0.2" id="second-para">...</div>
           </div>
           <div id="content-wrapper">
             <h1 class="center">HEY</h1>
             <div id="text-wrapper">
-              <p id="text">Ich bin Tobias Hölzer, 19 Jahre alt und komme aus Berlin. Physik und Informatik sind meine Gebiete.</p>
+              <p id="text">Diese Seite ist leider nicht mehr aktuell. Bitte besuche <a href="tobiashoelzer.de">Meine neue Homepage</a>.</p>
             </div>
           </div>
           <div id="links">
