--- a/views/EN/Start.ejs
+++ b/views/EN/Start.ejs
@@ -116,12 +116,12 @@
       <main class="mdl-layout__content">
         <div class="page-content"><!-- Your content goes here -->
           <div data-relative-input="true" id="scene">
-            <div data-depth="0.2" id="second-para">For the future.</div>
+            <div data-depth="0.2" id="second-para">...</div>
           </div>
           <div id="content-wrapper">
             <h1 class="center">HEY</h1>
             <div id="text-wrapper">
-              <p id="text">I am Tobias Hölzer and a 19 year old student from Berlin. IT and physics are my business.</p>
+              <p id="text">This website isn't up-to-date anymore. Please visit <a href="tobiashoelzer.de">My new Homepage</a>.</p>
             </div>
           </div>
           <div id="links">
